Update src/main/java/se/alipsa/jparq/engine/AggregateFunctions.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>
Signed-off-by: Per Nyfelt <per.nyfelt@nordnet.se>